--- a/Project_AD/Project_AD.vcxproj
+++ b/Project_AD/Project_AD.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Button.hpp" />
     <ClInclude Include="Game.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
