--- a/Project_AD/Project_AD.vcxproj
+++ b/Project_AD/Project_AD.vcxproj
@@ -107,7 +107,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)\SFML-2.6.0\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)\SFML-2.6.0\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-audio-d.lib;sfml-system-d.lib;sfml-network-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -142,6 +142,7 @@
     <ClInclude Include="Engine.hpp" />
     <ClInclude Include="Button.hpp" />
     <ClInclude Include="Game.hpp" />
+    <ClInclude Include="Textbox.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
