--- a/Project_AD/Project_AD.vcxproj
+++ b/Project_AD/Project_AD.vcxproj
@@ -144,7 +144,7 @@
     <ClInclude Include="Engine.hpp" />
     <ClInclude Include="Button.hpp" />
     <ClInclude Include="Game.hpp" />
-    <ClInclude Include="level.hpp" />
+    <ClInclude Include="LevelParser.hpp" />
     <ClInclude Include="Textbox.hpp" />
     <ClInclude Include="tinyxml2.h" />
   </ItemGroup>
