--- a/Project_AD/Project_AD.vcxproj
+++ b/Project_AD/Project_AD.vcxproj
@@ -145,11 +145,10 @@
     <ClInclude Include="Engine.hpp" />
     <ClInclude Include="Button.hpp" />
     <ClInclude Include="Game.hpp" />
-
     <ClInclude Include="Level.hpp" />
     <ClInclude Include="Level_buffer.hpp" />
     <ClInclude Include="LevelParser.hpp" />
-
+    <ClInclude Include="Player.hpp" />
     <ClInclude Include="Textbox.hpp" />
     <ClInclude Include="tinyxml2.h" />
   </ItemGroup>
