--- a/Project_AD/Project_AD.vcxproj
+++ b/Project_AD/Project_AD.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="Engine.hpp" />
     <ClInclude Include="Button.hpp" />
     <ClInclude Include="Game.hpp" />
+    <ClInclude Include="Items.hpp" />
     <ClInclude Include="Level_buffer.hpp" />
     <ClInclude Include="LevelParser.hpp" />
     <ClInclude Include="Player.hpp" />
