--- a/Project_AD/Project_AD.vcxproj.filters
+++ b/Project_AD/Project_AD.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="Player.hpp">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Items.hpp">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
